# quant-data-pipeline

./: .gitignore  AGENTS.md  README.md  pyproject.toml  test1.ipynb  test2.ipynb
.aiworkspace/: README.md
app/: __init__.py  workspace_paths.py
csv/: nyse_etf.csv  nyse_profile_failures_20260204.csv  nyse_profile_failures_20260206.csv  nyse_stock.csv
finance/: __init__.py  display.py  economic_cycle_asset_pathways.py  economic_cycle_catalog.py  economic_cycle_features.py  economic_cycle_interpretation.py  economic_cycle_labels.py  economic_cycle_model.py  economic_cycle_pipeline.py  economic_cycle_validation.py  engine.py  financial_source_policy.py  indicators.py  performance.py  sample.py  strategy.py  swing.py  swing_analysis.py  swing_macro.py  transform.py  visualize.py
financial_advisor/: agent.py  prompt.py
notebooks/: test1.ipynb  test2.ipynb  test3.ipynb
tests/: test_backtest_analysis_decision_workspace.py  test_backtest_analysis_research_board.py  test_backtest_analysis_result_workspace.py  test_backtest_etf_current_anchor.py  test_backtest_etf_evidence_expansion.py  test_backtest_etf_rerun_matrix.py  test_backtest_evidence_closure.py  test_backtest_final_review_decision_brief.py  test_backtest_final_review_refresh.py  test_backtest_level1_price_freshness.py  test_backtest_portfolio_mix_workspace.py  test_backtest_practical_validation_decision_workspace.py  test_backtest_practical_validation_explanation.py  test_backtest_quarterly_productionization.py  test_backtest_refactor_boundaries.py  test_backtest_risk_on_governance.py  test_eia_petroleum.py  (+77 more)
(+5052 files in other folders)
